--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.learn.iet-framework": "3.1.3",
     "com.unity.learn.iet-framework.authoring": "1.2.2",
     "com.unity.render-pipelines.universal": "14.0.12",
+    "com.unity.scriptablebuildpipeline": "1.21.25",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
